@@ -56,6 +56,8 @@
  -asis		Characters 128 - 255 shown as-is
  -force		Force final newline when files are saved
  -nolocks	If you don't want file locks to be used
+ -nomodcheck	Disable periodic checking of disk file newer than buffer
+		(this checking happens on save even with this option).
  -nobackups	If you don't want backup files to be created
  -break_links	Delete file before writing, to break hard links
  -exask		^KX always confirms file name
